--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "sass-mixins": "^0.13.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
